2003-11-16  Michael Jennings <mej@eterm.org>

	* Updated spec file for 3.1-1 release.

2003-11-04  Christian Bayle <bayle@debian.org>

	* added cvsweb.php a cvsweb wrapper
	This requires the following files from cvsweb
	Copyright terms are the BSD license, with the removal of condition 3,
	the advertising clause.
	utils/cvsweb
	etc/cvsweb.conf
	www/images/cvsweb/*.png
	* Applied Mitch Murphy patch [ #583 ] CVS commit checkbox update fix

2003-11-04  Tim Perdue <tim @ perdue.net>

	* www/pm added "mass update" for task manager

2003-11-04  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/notepad.php, www/include/note.php: New files.  *
	www/forum/include/ForumHTML.class, www/pm/add_task.php,
	www/pm/mod_task.php, www/tracker/add.php, www/tracker/detail.php,
	www/tracker/index.php, www/tracker/mod.php: Patch #559 from
	Hidenari Miwa and Tsutomu Tominaga: add pop-up window providing a
	larger editing area for texts.  Thanks, guys!

	* www/tracker/reporting/index.php: Fix highlighted tab when
	viewing tracker reports (patch #565 from Francisco Gimeno).

2003-11-04 Tom Copeland  <tom@infoether.com>

	* www/survey/index.php:
	Implemented RFE [ #576 ] Survey title could be clickable

2003-10-21  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/pm/gantt.php: Exit with a (more) helpful message if the
	JPGraph package is not installed.

	* www/include/languages/French.tab: Couple of minor fixes.

	* www/docman/include/doc_utils.php: "All languages" in language
	selection dropdown menu is now * rather than 0.

	* www/docman/index.php: Taking that change into consideration, we
	now set $language_id to 0 if we get "*" as a CGI value.  This
	means we can distinguish between undefined $language_id and "all
	languages", so that selecting "All languages" in a docman really
	shows documents from all languages.

2003-10-18 Christian Bayle <bayle@debian.org>
	
	* Applied various patch
	#547: Fix syntax typo of mailing_lists_create.php (Hidenari Miwa)