@@ -91,10 +91,9 @@ if ($login && !$success) {
 <input type="submit" name="login" value="<?php echo $Language->getText('account_login', 'login'); ?>" />
 </p>
 </form>
-<p>
-<a href="lostpw.php"><?php echo $Language->getText('account_login', 'lostpw'); ?></a></p>
-<p>
-<a href="register.php"><?php echo $Language->getText('account_login', 'newaccount'); ?></a></p>
+<p><a href="lostpw.php"><?php echo $Language->getText('account_login', 'lostpw'); ?></a></p>
+<p><a href="register.php"><?php echo $Language->getText('account_login', 'newaccount'); ?></a></p>
+<p><a href="pending-resend.php"><?php echo $Language->getText('account_login','resend_pending'); ?></a>
 
 <?php
 
