@@ -49,6 +49,8 @@ account_login	macwarn	<H2><FONT COLOR="RED">Internet Explorer on the Macintosh i
 account_login	newaccount	[New Account]
 account_login	passwd	Password:
 account_login	pending_account	<P>Your account is currently pending your email confirmation.		Visiting the link sent to you in this email will activate your account.		<P>If you need this email resent, please click below and a confirmation		email will be sent to the email address you provided in registration.		<P><A href="pending-resend.php?form_user=$1">[Resend Confirmation Email]</A>		<br><hr>		<p>
+account_login	resend_pending	[Resend confirmation email to a pending account]
+account_login	resend_pending_directions	Fill in a user name and click 'Submit' to resend the confirmation email
 account_login	sslnotice	<p><B><FONT COLOR="RED">You will be connected with an SSL server when you submit this form and your password will not be visible to other users.</FONT></B> <small style="font-size: x-small"> (If you wonder why very this page is not loaded via SSL, please read next paragraph. Thank you.) </small> <P> <B>Internet Explorer</B> users will have intermittent SSL problems, so they should leave SSL after login. Netscape users should stay in SSL mode permanently for maximum security.  Visit <A HREF="http://www.microsoft.com/">Microsoft</A> for more information about this known problem.  <P>
 account_login	title	Site Login
 account_login	usessl	Stay in SSL mode after login
@@ -114,6 +116,7 @@ account_register	realname	Full/Real Name:
 account_register	register	Register
 account_register	remember_me	"Remember me". <i>(Allows to access your $1 personal page</a> without being logged in. You will still need to login explicitly before making any changes.)</i>
 account_register	reset	Reset Changes
+account_register	resend_pending	[Resend confirmation email to a pending account]
 account_register	siteupdate	Receive Email about Site Updates <i>(Very low traffic and includes security notices. Highly Recommended.)</i>
 account_register	timezone	Timezone:
 account_register	title	New Account Registration
