@@ -1,3 +1,9 @@
+2003-11-17 Tom Copeland  <tom@infoether.com>
+
+	* www/account/register.php, login.php, pending-resend.php,
+	www/include/languages/Base.tab
+	Implemented RFE #590 Add link for "resend pending confirmation hash"
+
 2003-11-16  Michael Jennings <mej@eterm.org>
 
 	* Updated spec file for 3.1-1 release.
